--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask
-Jinja2
-gunicorn
+Flask==3.0.3
+Jinja2==3.1.4
+itsdangerous==2.2.0
+click==8.1.7
+Werkzeug==3.0.3
+gunicorn==21.2.0
+python-dotenv==1.0.1
